--- a/Store.Web/Layout/NavMenu.razor.css
+++ b/Store.Web/Layout/NavMenu.razor.css
@@ -60,10 +60,10 @@
     color: white;
 }
 
-.nav-item ::deep a:hover {
+/*.nav-item ::deep a:hover {
     background-color: rgba(255,255,255,0.1);
     color: white;
-}
+}*/
 
 @media (min-width: 641px) {
     .navbar-toggler {
@@ -80,4 +80,16 @@
         height: calc(100vh - 3.5rem);
         overflow-y: auto;
     }
+}
+/* Esto aplica a cualquier span con la clase .bi dentro del NavMenu */
+.nav-item ::deep .bi {
+    display: inline-block;
+    width: 1.25rem; /* Tamaño del área del icono */
+    height: 1.25rem;
+    margin-right: 0.75rem; /* Espacio con el texto */
+    vertical-align: middle; /* Alineación vertical */
+    font-size: 1.25rem; /* Tamaño real del dibujo */
+    line-height: 1;
+    position: relative;
+    top: -1px; /* Ajuste fino para que quede perfecto al ojo */
 }
