--- a/Store.Web/Pages/Categorias.razor
+++ b/Store.Web/Pages/Categorias.razor
@@ -50,9 +50,35 @@
         </div>
     </div>
 </div>
+@* FORMULARIO MODAL DE EDICIÓN DE CATEGORÍAS *@
+@if (mostrarModal)
+{
+    <div class="modal fade show" style="display: block; background-color: rgba(0,0,0,0.5);" tabindex= "-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">@tituloModal</h5>
+                    <button type="button" class="btn-close" @onclick="CerrarModal"></button>
+
+                    <div class="modal-body">
+                        <p>Aquí pondremos el formulario en el siguiente paso</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" @onclick="CerrarModal">Cancelar</button>
+                        <button type="button" class="btn btn-primary">Guardar</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+}
 
 @code {
+
     private List<Category>? categorias;
+    private Category categoriaActual = new Category();
+    private string tituloModal = "Nueva Categoría";
+    private bool mostrarModal = false;
 
     public class Category
     {
@@ -108,4 +134,21 @@
             await Notificaciones.MostrarToast(JS, "No se puede eliminar", "Existen productos asociados a esta categoría");
         }        
     }
+
+    #region ModalEdicionCategorias
+    // Método para abrir el modal (lo llamará el botón "Nueva Categoría")
+    private void AbrirModal()
+    {
+        categoriaActual = new Category(); // Limpiamos el objeto por si había algo de antes
+        tituloModal = "Nueva Categoría";
+        mostrarModal = true;
+    }
+
+    // Método para cerrar el modal
+    private void CerrarModal()
+    {
+        mostrarModal = false;
+    }
+    #endregion
+
 }
