--- a/Store.Web/Layout/NavMenu.razor
+++ b/Store.Web/Layout/NavMenu.razor
@@ -24,6 +24,11 @@
                 <span class="bi bi-tags" aria-hidden="true"></span> Categorias
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="products">
+                <span class="bi bi-box-seam-fill" aria-hidden="true"></span> Productos
+            </NavLink>
+        </div>
     </nav>
 </div>
 
