--- a/Store.Web/Layout/NavMenu.razor
+++ b/Store.Web/Layout/NavMenu.razor
@@ -29,6 +29,11 @@
                 <span class="bi bi-box-seam-fill" aria-hidden="true"></span> Productos
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="login">
+                <span class="bi bi-box-seam-fill" aria-hidden="true"></span> Login
+            </NavLink>
+        </div>
     </nav>
 </div>
 
