--- a/Store.Web/Pages/Products.razor
+++ b/Store.Web/Pages/Products.razor
@@ -1,6 +1,6 @@
 ﻿@page "/products"
 @inject Store.Web.Services.ProductService ProductService
-@inject Store.Web.Services.ICategoryService CategoryService // <--- Inyectamos la interfaz
+@inject Store.Web.Services.ICategoryService CategoryService 
 @inject IJSRuntime JS
 <div class="container mt-4">
     <div class="card shadow">
